import static com.sun.tools.internal.jxc.SchemaGenerator.Runner.compile

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/groups/public/"
    }
}


jar {
    manifest {
        attributes "Main-Class": "boldtrn.Main"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    maxHeapSize = "2048m"
    jvmArgs "-XX:MaxPermSize=2048m"
}

dependencies {
    compile('com.graphhopper:graphhopper:latest.release')
    compile 'net.sf.supercsv:super-csv:2.4.0'
    compile 'junit:junit:4.12'
    compile 'org.slf4j:slf4j-api:1.7.12'
    compile 'org.slf4j:slf4j-log4j12:1.7.12'
    compile 'log4j:log4j:1.2.17'
}